--- a/simple-python-app/buildspec.yml
+++ b/simple-python-app/buildspec.yml
@@ -5,10 +5,12 @@ env:
     DOCKER_REGISTRY_USERNAME: /myapp/docker-credentials/username
     DOCKER_REGISTRY_PASSWORD: /myapp/docker-credentials/password
     DOCKER_REGISTRY_URL: /myapp/docker-registry/url
+
 phases:
   install:
     runtime-versions:
       python: 3.11
+      docker: 20  # Add Docker runtime
   pre_build:
     commands:
       - echo "Installing dependencies..."
@@ -24,9 +26,7 @@ phases:
   post_build:
     commands:
       - echo "Build completed successfully!"
+
 artifacts:
   files:
     - '**/*'
-
-
-
